# Autonomous_Snowplow_2023

./: Arduino Motor Test Code  README.md  test_smach.py
buffer_waypoints/: CMakeLists.txt  package.xml  setup.py
buffer_waypoints/src/: buffer_waypoints.py
jetson_snowplow/gps_tcp_publisher/: CMakeLists.txt  package.xml  setup.py
jetson_snowplow/gps_tcp_publisher/config/: gps.yaml
jetson_snowplow/gps_tcp_publisher/launch/: gps.launch
jetson_snowplow/gps_tcp_publisher/scripts/: gps.py
jetson_snowplow/gps_tcp_publisher/src/: gps_driver.py
jetson_snowplow/gps_tcp_publisher/src/gps_tcp_publisher/: __init__.py  gps_driver.py
jetson_snowplow/localization_data_pub/: CMakeLists.txt  package.xml
jetson_snowplow/localization_data_pub/src/: rviz_click_to_2d.cpp
jetson_snowplow/navstack_pub/: package.xml
jetson_snowplow/navstack_pub/config/: costmap_common_depth_params.yaml  global_costmap_depth_params.yaml  global_planner_params.yaml  local_costmap_depth_params.yaml  local_planner_params.yaml  move_base_params.yaml
jetson_snowplow/navstack_pub/launch/: camera.launch  comp.launch  ekf_test.launch  full_coverage_planner.launch  imu.launch  jetson_nano_bot.launch  local_ekf.launch  nav.launch  realsense.launch  rtab.launch  rtab_test.launch  single_ekf.launch  ukf.launch  voxelgrid_throt.launch
jetson_snowplow/navstack_pub/param/: base_local_planner_params.yaml  base_planner_test.yaml  costmap_common_params.yaml  ekf_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  mbf.yaml  move_base_params.yaml  navsat_params.yaml  single_ekf.yaml  teb_local_planner_params.yaml  ukf_params.yaml
jetson_snowplow/nmea_socket_pub/: CMakeLists.txt
jetson_snowplow/nmea_socket_pub/config/: gps.yaml
jetson_snowplow/nmea_socket_pub/src/nmea_socket_pub/: driver.py
maps/: bare_comp_map.pgm  bare_comp_map.yaml  comp_map_convig.rviz  comp_map_updated.pgm  comp_map_updated.yaml  snow_map
nmea_socket_pub/: README.md
nmea_socket_pub/nmea_socket_pub/: CMakeLists.txt  package.xml  setup.py
nmea_socket_pub/nmea_socket_pub/launch/: gps.launch
nmea_socket_pub/nmea_socket_pub/scripts/: gps.py
nmea_socket_pub/nmea_socket_pub/src/nmea_socket_pub/: __init__.py  driver.py
opencv_map_scripts/: MakeROSMap.py  convert_to_binary.py
snowplow_tesctrl_pkg/: TestController  package.xml  setup.cfg  setup.py
snowplow_tesctrl_pkg/snowplow_tesctrl_pkg/: test_controller_node.py
waypoint_follower/: README.md
waypoint_follower/waypoint_follower/: CMakeLists.txt  README.md  package.xml
waypoint_follower/waypoint_follower/src/: waypoint_follower.cpp
